<?xml version="1.0"?>
<package>
  <name>roomba_500_series_gamepad</name>
  <version>0.0.0</version>
  <description>The roomba_500_series_gamepad package</description>

  <maintainer email="sets92@outlook.com">sets92</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
